@@ -5,6 +5,7 @@ DEADLINES
 DESIGN
 - point-slope: should blue manipulator be labeled (x1,y1)?
 - move "lines" control panel closer to graph, into space reserved for moving point tools?
+- stubby minus sign in equations on Win
 
 HIGH
 - decide which controls to use for interactive equations, then delete the ones that aren't used
